[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/dice_tooltip/dice_tooltip.gd" id="1"]

[node name="DiceTooltip" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 1
mouse_filter = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "주사위 이름"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="IDRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="IDTitle" type="Label" parent="MarginContainer/VBox/IDRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "ID:"

[node name="IDLabel" type="Label" parent="MarginContainer/VBox/IDRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "dice_id"

[node name="GroupsRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="GroupsTitle" type="Label" parent="MarginContainer/VBox/GroupsRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Groups:"

[node name="GroupsLabel" type="Label" parent="MarginContainer/VBox/GroupsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "group1, group2"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "주사위 설명"
horizontal_alignment = 1
autowrap_mode = 2
